--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
 urllib3==2.2.2
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.9 # not installed on my venv, this is just for vercel
